force-app/main/default/objects/Book__c/fields/Book_title__c.field-meta.xml
<CustomField>
    <fullName>Book_title__c</fullName>
    <label>Book title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>