force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <displayFormat>B-{000}</displayFormat>
    <label>ISBN#</label>
    <type>AutoNumber</type>
</CustomField>