force-app/main/default/objects/Book__c/fields/Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Unit_price__c</fullName>
    <label>Unit price</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>